<resources>
    <string name="app_name">Lab1</string>
    <string name="title">中山大学学生信息系统</string>
    <string name="id">学号：</string>
    <string name="inputId">请输入学号</string>
    <string name="password">密码：</string>
    <string name="inputPassword">请输入密码</string>
    <string name="student">学生</string>
    <string name="teacher">教职工</string>
    <string name="SignIn">登录</string>
    <string name="SignUp">注册</string>
</resources>
