<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>
    <!--layout_constraintGuide_percent in [0.0, 1.0]-->

    <!--Title: 中山大学学生信息系统-->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/title"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/sysu"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <!--student ID-->
    <TextView
        android:id="@+id/studentID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/pic"/>
    <!--input student ID-->
    <EditText
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:hint="@string/inputId"
        app:layout_constraintLeft_toRightOf="@+id/studentID"
        android:textSize="18sp"
        android:layout_marginRight="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/studentID"
        app:layout_constraintBottom_toBottomOf="@+id/studentID"
        android:digits="0123456789"/>

    <!--password-->
    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/studentID"/>
    <!--input password-->
    <EditText
        android:id="@+id/inputPwd"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:hint="@string/inputPassword"
        app:layout_constraintLeft_toRightOf="@+id/password"
        android:textSize="18sp"
        android:layout_marginRight="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/password"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        android:inputType="textPassword"
        />

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/inputPwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <!--需要对Radio Button设置id才能默认选中-->
        <RadioButton
            android:id="@+id/studentCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:checked="true"
            android:textSize="18sp"
            android:layout_marginRight="10dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:textSize="18sp"/>
    </RadioGroup>

    <Button
        android:id="@+id/SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignIn"
        android:background="@drawable/round_button"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/RadioGroup"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        android:layout_marginRight="5dp"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignUp"
        android:background="@drawable/round_button"
        app:layout_constraintTop_toTopOf="@id/SignIn"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        android:layout_marginLeft="5dp"
        android:textColor="@color/white"/>

</android.support.constraint.ConstraintLayout>